applicant and file logic added